Fix detection for the sticky "Add topic" being stuck
This fixes some animations when scrolling.

--- a/modules/dt.init.less
+++ b/modules/dt.init.less
@@ -857,7 +857,7 @@ h1, h2, h3, h4, h5, h6 {
 
 	.ext-discussiontools-init-new-topic-closed &,
 	.ext-discussiontools-init-virtual-keyboard-open &,
-	&-pinned.oo-ui-buttonElement {
+	&-pinned {
 		transform: translateY( 0 );
 		opacity: 1;
 		position: static;
